--- a/form-handling-react/package.json
+++ b/form-handling-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "github-user-search",
+  "name": "form-handling-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.11.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.1"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
